@@ -184,8 +184,10 @@ public class CraftBookListener extends PluginListener {
         _3isoICs.put("MC3031", new MC3031());
         _3isoICs.put("MC3034", new MC3034());
         _3isoICs.put("MC3036", new MC3036());
+        _3isoICs.put("MC3040", new MC3040());
         _3isoICs.put("MC3231", new MC3231());
         _3i3oICs.put("MC4000", new MC4000());
+        _3i3oICs.put("MC4010", new MC4010());
     }
 
     /**
