@@ -20,24 +20,23 @@
 package com.sk89q.craftbook.ic;
 
 /**
- * Full adder
+ * Half subtractor
  * @author Lymia
  */
-public class MC4000 extends _3I3OFamilyIC {
+public class MC4110 extends _3I3OFamilyIC {
 	public String getTitle() {
-		return "FULL ADDER";
+		return "HALF SUBTRACTOR";
 	}
 
 	public void think(ChipState chip) {
-		boolean A = chip.getIn(1).is();
 		boolean B = chip.getIn(2).is();
 		boolean C = chip.getIn(3).is();
 		
-		boolean S = A^B^C;
-		boolean Ca = (A&B)|((A^B)&C);
+		boolean S = B^C;
+		boolean Bo = !B&C;
 		
 		chip.getOut(1).set(S);
-		chip.getOut(2).set(Ca);
-		chip.getOut(3).set(Ca);
+		chip.getOut(2).set(Bo);
+		chip.getOut(3).set(Bo);
 	}
 }
